[tool.poetry]
name = "fdlake"
version = "0.1.0"
description = ""
authors = ["mckim <mckim@dataknows.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test-sum = 'fdlake.app:test_sum'